# kata

./: CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt
src/app/: main.cpp
src/lib/: calculationerror.cpp  calculationerror.h  calculator.cpp  calculator.h
tests/auto/calc/: CMakeLists.txt  test_calculator.cpp
